Texture paint, texture mask, random doesn't work alone #45880

Closed
opened 2015-08-23 12:51:34 +02:00 by Nahuel Belich · 6 comments

System Information
Win 7 x64
Nvidia gtx 460

Blender Version
Broken: hash: 58c9a0b

Short description of error

https://www.youtube.com/watch?v=i5k2JLwHfzw&feature=youtu.be

for ramdom on texture mask's view plane mode to work it requires to have also view plane active on texture

Exact steps for others to reproduce the error
1-open random_paint1.blend
2- random its on, but try painting
3-go to texture tab, and select view plane mode
4-paint

**System Information** Win 7 x64 Nvidia gtx 460 **Blender Version** Broken: hash: 58c9a0b **Short description of error** https://www.youtube.com/watch?v=i5k2JLwHfzw&feature=youtu.be for ramdom on texture mask's view plane mode to work it requires to have also view plane active on texture **Exact steps for others to reproduce the error** 1-open [random_paint1.blend](https://archive.blender.org/developer/F226991/random_paint1.blend) 2- random its on, but try painting 3-go to texture tab, and select view plane mode 4-paint
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

Added subscribers: @Psy-Fi, @Sergey

Added subscribers: @Psy-Fi, @Sergey
Antonis Ryakiotakis was assigned by Sergey Sharybin 2015-08-24 10:45:05 +02:00

@Psy-Fi, mind having a look? Thanks! :)

@Psy-Fi, mind having a look? Thanks! :)

This issue was referenced by a9b0390bff

This issue was referenced by a9b0390bff074a15f927c192fcb60b3264e655b9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45880
No description provided.