Fix T45880: Texture Paint mask random angle fails

Random mask failed when the paint brush didn't have random angle enabled too.